Proceso de obtención de los Characters de la API haciendo uso de Retrofit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ProyectoASEE</string>
+    <string name="api_base_url">https://gateway.marvel.com:443/v1/public/</string>
+    <string name="api_key">8930b8251773dc6334474b306aaaa6b6</string>
 </resources>
