--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="openWeb">Show in web</string>
     <string name="descriptionString">Description</string>
     <string name="comicsString">Comics</string>
+    <string name="search">Search</string>
 </resources>
