Navigation Drawer + Characters + Character details with Tabs + Comics

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="descriptionString">Description</string>
     <string name="comicsString">Comics</string>
     <string name="search">Search</string>
+    <string name="fav">Favorite</string>
 </resources>
