--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="limit_api_summary">Select the number of resources to download each time</string>
     <string name="limit_api_dialog">Number of resources</string>
     <string name="settings">Settings</string>
+    <string name="options">Options</string>
+    <string name="no_data">No data found</string>
+    <string name="previous">Previous Related Series</string>
+    <string name="next">Next Related Series</string>
 </resources>
